# teigha

./: README.md
4.02/Teigha.NET_vc11_amd64dll/Teigha.NET/Examples/: CMakeLists.txt
4.02/Teigha.NET_vc11_amd64dll/Teigha.NET/Examples/ASP_example/: Default.aspx.cs
4.02/Teigha.NET_vc11_amd64dll/Teigha.NET/Examples/CustomCommand/: CMakeLists.txt  Class1.cs  ReadMe.docx
4.02/Teigha.NET_vc11_amd64dll/Teigha.NET/Examples/DwgDgnViewerSwigMgd/: CMakeLists.txt  CustomCommand.cs  Form1.Designer.cs  Form1.cs  Form2.Designer.cs  Form2.cs  Orbit.cs  Program.cs  UserControl1.Designer.cs  UserControl1.cs
4.02/Teigha.NET_vc11_amd64dll/Teigha.NET/Examples/EvaluationExample/: CMakeLists.txt  Program.cs
4.02/Teigha.NET_vc11_amd64dll/Teigha.NET/Examples/ExDgnCreateSwigMgd/: CMakeLists.txt  EntityBoxes.cs  ExDgnFiller.cs  Program.cs
4.02/Teigha.NET_vc11_amd64dll/Teigha.NET/Examples/ExDgnDumpSwigMgd/: CMakeLists.txt  ExDgnDumpElements.cs  Program.cs
4.02/Teigha.NET_vc11_amd64dll/Teigha.NET/Examples/ExDgnReadWriteSwigMgd/: CMakeLists.txt  Program.cs
4.02/Teigha.NET_vc11_amd64dll/Teigha.NET/Examples/ExDgnSimpleProjectSwigMgd/: CMakeLists.txt  Program.cs
4.02/Teigha.NET_vc11_amd64dll/Teigha.NET/Examples/ExDgnVectorizeSwigMgd/: CMakeLists.txt  ExGsSimpleDevice.cs  GiDumper.cs  OdGiConveyorGeometryDumper.cs  Program.cs
4.02/Teigha.NET_vc11_amd64dll/Teigha.NET/Examples/MultiThreadedDumper/: CMakeLists.txt  DbDumper.cs  IntroductionToMThrManager.doc  MultiSampleDescription.doc  Program.cs
4.02/Teigha.NET_vc11_amd64dll/Teigha.NET/Examples/OdBrExSwigMgd/: CMakeLists.txt  Process.cs  (+3 more)
(+1167 files in other folders)
