add_subdirectory(ExDgnCreateSwigMgd)
add_subdirectory(ExDgnDumpSwigMgd)
add_subdirectory(ExDgnReadWriteSwigMgd)
add_subdirectory(ExDgnVectorizeSwigMgd)
add_subdirectory(OdaDgnAppSwigMgd)
add_subdirectory(OdReadExSwigMgd)
add_subdirectory(OdWriteExSwigMgd)
add_subdirectory(DwgDgnViewerSwigMgd)
add_subdirectory(WpfSample)
add_subdirectory(ExDgnSimpleProjectSwigMgd)
add_subdirectory(OdaDwgAppSwigMgd)
add_subdirectory(EvaluationExample)
add_subdirectory(OdBrExSwigMgd)
if(NOT MSVC90)
add_subdirectory(MultiThreadedDumper)
endif(NOT MSVC90)
add_subdirectory(VBDwgAppSwigMgd)